--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@
 	margin-top: 30px;
 }
 
+#start-game-btn {
+	margin-bottom: 40px !important;
+}
+
 @media only screen and (max-width: 480px) {
 	.screen-body,
 	.screen {
